Update all thesis tex and tikz documents

--- a/subprojects/tesis/acta_aprob_licel.tex
+++ b/subprojects/tesis/acta_aprob_licel.tex
@@ -59,7 +59,7 @@ establecidas por la \thesisDepartment{} del \thesisInstitution{}.
 \vfill
 
 \begin{center}
-  Cartago, \ifdraft{\thesisDraftDate}{\thesisFinalDate}\par
+  Cartago, \ifdraft{\thesisDraftDate}{\FechaFinal}\par
 \end{center}
 
 \cleardoublepage
