--- a/subprojects/tesis/acta_eval_licel.tex
+++ b/subprojects/tesis/acta_eval_licel.tex
@@ -82,7 +82,7 @@ siguiente calificación:
 \vfill
 
 \begin{center}
-  Cartago, \ifdraft{\thesisDraftDate}{\thesisFinalDate}\par
+  Cartago, \ifdraft{\thesisDraftDate}{\FechaFinal}\par
 \end{center}
 
 \cleardoublepage
