--- a/subprojects/tesis/disclaimer.tex
+++ b/subprojects/tesis/disclaimer.tex
@@ -17,7 +17,7 @@ el contenido del presente documento.
 
 \begin{flushright}
   \thesisAuthor\par
-  Cartago, \today\par
+  Cartago, \FechaFinal\par
   Céd: 1-1741-0734
 \end{flushright}
 
