--- a/subprojects/tesis/titlepage_licel_es.tex
+++ b/subprojects/tesis/titlepage_licel_es.tex
@@ -45,7 +45,7 @@ Informe de Trabajo Final de Graduación para optar por el título de
 \ifdraft{%
   {Borrador de \thesisDraftDate}%
 }{%
-  {Cartago, \thesisFinalDate}%
+  {Cartago, \FechaFinal}%
 }
 \end{center}
 \newpage 
