--- a/subprojects/tesis/agradecimientos.tex
+++ b/subprojects/tesis/agradecimientos.tex
@@ -1,15 +1,15 @@
 \chapter*{Acknowledgements}
 \thispagestyle{empty}
 
-I thank my mom Maritza Badilla, my dad Ricardo Guindon, my sister Hazel, my brother David, the extended Guindon family, and the Monteverde community, which supplied the perfect environment for maximum development in both artistic endeavor and scientific enterprise.
+I thank my mom Maritza Badilla, my dad Ricardo Guindon, my sister Hazel, my brother David, the extended Guindon and Badilla families, and the Monteverde community, which all have conspired to provide the perfect environment for maximum development in both artistic endeavor and scientific enterprise.
 
-I thank Elena, for sharing her support during the development of this project.
+I thank Elena $\heartsuit$, for sharing her support during the development of this project.
 
-I thank my closest highschool friends Diego, Cristina, and Josue, for stubbornly distracting me from my research. I know you all were acting in my best interests, or so you all say.
+I thank my close highschool friends Diego, Cristina, and Josue, for stubbornly distracting me from my research. I know you all were acting in my best interests, or so you all say.
 
-I thank my closest college friend Emi, my close friends at the SeleHouse, my friends at Tec, and my friends at RidgeRun, which have all provided spaces where I've shared my research's progress.
+I thank my close college friend Emi, my close friends at the SeleHouse, my friends at TEC, and my friends at RidgeRun, which have all provided spaces where I've shared my research's progress.
 
-I thank Marco Madrigal and Melissa Montero at RidgeRun, for contributing professional management over the dispTec project, as well as providing me with valuable lessons during one of the hardest points in my life.
+I thank Marco Madrigal and Melissa Montero at RidgeRun, for contributing professional management over the dispTEC2 project, as well as providing me with valuable lessons during one of the hardest points in my life thus far.
 
 I thank those brilliant minds I've worked with at RidgeRun, which have trained me in the art of developing all sorts of software shenanigans.
 
