--- a/subprojects/tesis/resumen.tex
+++ b/subprojects/tesis/resumen.tex
@@ -1,21 +1,21 @@
 \chapter*{Resumen}
 \thispagestyle{empty}
 
-Las herramientas de trasmisión de video en vivo son habituales en contextos profesionales, académicos y recreativos gracias a los avances actuales en velocidad de red, procesamiento de imágenes y tecnología digital. Existe un gran interés por garantizar una alta calidad de experiencia (QoE) para estos servicios. Estos servicios pueden sufrir de artefactos de vídeo causados por pérdidas de paquetes durante la transmisión de vídeo. El proyecto anterior de dispTEC2-2022 pretendía crear un Sistemas de Restauración de Vídeo para restaurar eficazmente el vídeo con pérdidas en línea, pero concluyó sin un Sistema de Detección de Artefactos adecuado. Este proyecto propone Rangerx, que mejora el sistema de detección de dispTEC2-2022, basado en Bosques de Decisión Aleatoria (RDF), en 3 aspectos: Rangerx fue entrenado con un conjunto de datos más grande, con una nueva estrategia optimizada de extracción de características, y con un nuevo RDF optimizado.
+Las herramientas de trasmisión de video en vivo son habituales en contextos profesionales, académicos y recreativos gracias a los avances actuales en velocidad de red, procesamiento de imágenes y tecnología digital. Existe un gran interés por garantizar una alta calidad de experiencia (QoE) para estos servicios. Los videos pueden sufrir de artefactos causados por pérdidas de paquetes durante la videotransmisión. El proyecto anterior de dispTEC2 pretendía crear un Sistema de Restauración de Video en línea, capaz de ofrecer una solución al problema de los artefactos de video. Sin embargo, dispTEC2 concluyó sin un Sistema de Detección de Artefactos adecuado. Este trabajo propone Art-FD, que mejora el sistema de detección de dispTEC2 a base de Bosques de Decisión Aleatoria (RDF) en 3 aspectos: Art-FD es entrenado con un conjunto de datos más grande, con una nueva estrategia optimizada de extracción de características, y con un nuevo RDF optimizado. Art-FD tiene desempeño alto en detección y velocidad, con solo el uso de recursos de CPU.
 \bigskip
 
 %% Defina las palabras clave con defKeywords en config.tex:
-\textbf{Palabras clave:} \thesisKeywords
+\textbf{Palabras clave:} Codificación H264, Pérdida de Paquetes, Artefactos de Video, Gstreamer, Detección de Artefactos, Bosques de Decisión Aleatoria, Extracción de Características, Aprendizaje de Máquina Clásico, Filtro 2D Pasa Altas, Tabla de Areas Sumadas, Matríz de Confusión, Precisión de Clasificación, Exhaustividad de Clasificación \thesisKeywords
 
 \clearpage
 \chapter*{Abstract}
 \thispagestyle{empty}
 
-Current advances in network speed, image processing, and digital technology have rendendered live video tools commonplace in professional, academic, and recreational contexts. Therefore, there has been increased interest in ensuring a high quality of experience (QoE) for these services. These services may suffer from video artifacts caused by packet losses during video transmission. The previous dispTEC2-2022 project aimed to create a Video Restoration System to efficiently restore video with losses on-line, but concluded without a proper Artifact Detection System. This project proposes Rangerx, which improves in 3 ways over the dispTEC2-2022 Random Decision Forest (RDF) artifact detection approach: Rangerx was trained with a larger dataset, with a new optimized feature extraction strategy, and with a new optimized RDF backend.
+Current advances in network speed, image processing, and digital technology have rendendered live video tools commonplace in professional, academic, and recreational contexts. Therefore, there has been increased interest in ensuring a high quality of experience (QoE) for these services. Videos may suffer from artifacts caused by packet losses during video transmission. The previous dispTEC2 project aimed to create an On-line Video Restoration System to solve the video artifact problem. However, dispTEC2 concluded without a proper Artifact Detection System. This work proposes Art-FD, which improves in 3 ways over the dispTEC2 Random Decision Forest (RDF) artifact detection approach: Art-FD is trained with a larger dataset, with a new optimized feature extraction strategy, and with a new optimized RDF backend. Art-FD provides high detection and speed performance, while only making use of CPU resources.
 
 \bigskip
 
-\textbf{Keywords:} word 1, word 2, 
+\textbf{Keywords:} H264 Encoding, Packet Loss, Video Artifacts, Gstreamer,  Artifact Detection, Random Decision Forests, Feature Extraction, Classical Machine Learning, 2D High Pass Filter, Summed-Area Table, Confusion Matrix, Classification Precision, Classification Recall.
 
 \cleardoublepage
 
